Update libnetconf2 package version

--- a/libnetconf2/Makefile
+++ b/libnetconf2/Makefile
@@ -8,19 +8,19 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=libnetconf2
-PKG_VERSION:=1.0.5
+PKG_VERSION:=1.1.3
 PKG_RELEASE:=2
 
 PKG_LICENSE:=BSD-3-Clause
 PKG_MAINTAINER:=Luka Paulic <luka.paulic@sartura.hr>
 
-#PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
-#PKG_SOURCE_URL:=http://192.168.110.41:7777/tmp
-#PKG_HASH:=e04ccc65317c2f346d2760d699e4738c116872e60d9d93e99e196d1053423a05
+PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
+PKG_SOURCE_URL:=https://codeload.github.com/CESNET/libnetconf2/tar.gz/v$(PKG_VERSION)?
+PKG_HASH:=38e780cdd0135e9c7fe44b5190a1acc8c33cb28aa395c329893b019a57b1f783
 
-PKG_SOURCE_PROTO:=git
-PKG_SOURCE_URL:=git@github.com:CESNET/libnetconf2.git
-PKG_SOURCE_VERSION:=857425d50c2850ad265a127c9a8d50a11063b294
+#PKG_SOURCE_PROTO:=git
+#PKG_SOURCE_URL:=git@github.com:CESNET/libnetconf2.git
+#PKG_SOURCE_VERSION:=857425d50c2850ad265a127c9a8d50a11063b294
 
 CMAKE_INSTALL:=1
 
