Update Netopeer2 package version

--- a/Netopeer2/Makefile
+++ b/Netopeer2/Makefile
@@ -10,19 +10,19 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=Netopeer2
-PKG_VERSION:=1.0.11
+PKG_VERSION:=1.1.1
 PKG_RELEASE:=4
 
 PKG_LICENSE:=BSD-3-Clause
 PKG_MAINTAINER:=Luka Paulic <luka.paulic@sartura.hr>
 
-#PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
-#PKG_SOURCE_URL:=http://192.168.110.14:7777/tmp/
-#PKG_HASH:=e74d8002b252fa110eef32aff7ad51c7dda918ff92092f23866fe7004c1f1df9
+PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
+PKG_SOURCE_URL:=https://codeload.github.com/CESNET/Netopeer2/tar.gz/v$(PKG_VERSION)?
+PKG_HASH:=f855e2f81fc32b0ff9199a4ef8e1993b35f708594c5d72af2e6ecd246c23b1eb
 
-PKG_SOURCE_PROTO:=git
-PKG_SOURCE_URL:=git@github.com:CESNET/Netopeer2.git
-PKG_SOURCE_VERSION:=b18f506107ac0627c159529149414a3c3965a03d
+#PKG_SOURCE_PROTO:=git
+#PKG_SOURCE_URL:=git@github.com:CESNET/Netopeer2.git
+#PKG_SOURCE_VERSION:=b18f506107ac0627c159529149414a3c3965a03d
 
 CMAKE_INSTALL:=1
 
