Update sysrepo package version

--- a/sysrepo/Makefile
+++ b/sysrepo/Makefile
@@ -11,16 +11,16 @@ PKG_LICENSE:=ASL-2.0
 PKG_MAINTAINER:=Luka Paulic <luka.paulic@sartura.hr>
 
 PKG_NAME:=sysrepo
-PKG_VERSION:=1.3.20
+PKG_VERSION:=1.3.21
 PKG_RELEASE:=4
 
-#PKG_SOURCE:=${PKG_NAME}-${PKG_VERSION}.tar.gz
-#PKG_SOURCE_URL:=http://192.168.110.14:7777/tmp/
-#PKG_HASH:=5dd40a49e14412059e747762244c8800c91aec74237d86ff51e08fb0b9db3868
+PKG_SOURCE:=${PKG_NAME}-${PKG_VERSION}.tar.gz
+PKG_SOURCE_URL:=https://codeload.github.com/sysrepo/sysrepo/tar.gz/v$(PKG_VERSION)?
+PKG_HASH:=be405a33b1713d1114f3c092a6349b25a2de2a0f43a15dc6984c029f70230b3b
 
-PKG_SOURCE_PROTO:=git
-PKG_SOURCE_URL:=https://github.com/sysrepo/sysrepo.git
-PKG_SOURCE_VERSION:=d5f9d633409e1bbe6de65930fad51248e4744b01
+#PKG_SOURCE_PROTO:=git
+#PKG_SOURCE_URL:=https://github.com/sysrepo/sysrepo.git
+#PKG_SOURCE_VERSION:=d5f9d633409e1bbe6de65930fad51248e4744b01
 
 CMAKE_INSTALL:=1
 
