--- a/libyang/Makefile
+++ b/libyang/Makefile
@@ -8,27 +8,20 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=libyang
-PKG_VERSION:=1.0.109
-PKG_RELEASE:=4
-
-PKG_LICENSE:=GPL-2.0+
-PKG_MAINTAINER:=Luka Paulic <luka.paulic@sartura.hr>
+PKG_VERSION:=1.0.184
+PKG_RELEASE:=1
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
 PKG_SOURCE_URL:=https://codeload.github.com/CESNET/libyang/tar.gz/v$(PKG_VERSION)?
-PKG_HASH:=1686a381a8cce775102e60c8eb93f7ba64c6d4ae10591fc05d9f969a07815f60
+PKG_HASH:=1a5637451b73c4c5683837eb4c51371bb084795f653bc1a5fc20fed5541b58bc
 
-#PKG_SOURCE_PROTO:=git
-#PKG_SOURCE_URL:=https://github.com/CESNET/libyang.git
-#PKG_SOURCE_VERSION:=1f63d03a162a122772eda741e18255fe3b5e12f9
-
-
-# PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)/build
+PKG_MAINTAINER:=Jakov Smolic <jakov.smolic@sartura.hr>
+PKG_LICENSE:=BSD-3-Clause
+PKG_LICENSE_FILES:=LICENSE
 
 CMAKE_INSTALL:=1
-
 PKG_BUILD_PARALLEL:=1
-PKG_INSTALL:=1
+CMAKE_BINARY_SUBDIR:=build
 
 include $(INCLUDE_DIR)/package.mk
 include $(INCLUDE_DIR)/cmake.mk
@@ -37,15 +30,23 @@ define Package/libyang
   SECTION:=libs
   CATEGORY:=Libraries
   TITLE:=YANG data modeling language library
-  URL:=$(PKG_SOURCE_URL)
+  URL:=https://github.com/CESNET/libyang
   DEPENDS:=+libpcre +libpthread
+endef
+
+define Package/libyang-cpp
+  SECTION:=libs
+  CATEGORY:=Libraries
+  TITLE:=YANG data modeling C++ language library
+  URL:=https://github.com/CESNET/libyang
+  DEPENDS:=+libyang +libstdcpp
 endef
 
 define Package/yanglint
   SECTION:=utils
   CATEGORY:=Utilities
   TITLE:=YANG data modeling language utility
-  URL:=$(PKG_SOURCE_URL)
+  URL:=https://github.com/CESNET/libyang
   DEPENDS:=+libyang
 endef
 
@@ -54,41 +55,34 @@ define Package/libyang/description
  The library is used e.g. in libnetconf2, Netopeer2 or sysrepo projects.
 endef
 
-TARGET_LDFLAGS += -lm
-
-CMAKE_BINARY_SUBDIR:=build
-
 CMAKE_OPTIONS += \
-	-DCMAKE_INSTALL_PREFIX:PATH=/usr \
 	-DENABLE_LYD_PRIV:BOOL=ON \
-	-DCMAKE_BUILD_TYPE:STRING=Release \
+	-DCMAKE_BUILD_TYPE:String="Release" \
+	-DGEN_LANGUAGE_BINDINGS=ON \
+	-DGEN_PYTHON_BINDINGS=OFF
 
-define Build/InstallDev
-	$(INSTALL_DIR) $(1)/usr/lib
-	$(CP) $(PKG_INSTALL_DIR)/usr/lib/libyang.so* $(1)/usr/lib/
-
-	$(INSTALL_DIR) $(1)/usr/include/libyang
-	$(INSTALL_BIN) $(PKG_INSTALL_DIR)/usr/include/libyang/* $(1)/usr/include/libyang/
-
-	$(INSTALL_DIR) $(1)/usr/lib/pkgconfig
-	$(INSTALL_CONF) $(PKG_INSTALL_DIR)/usr/lib/pkgconfig/libyang.pc $(1)/usr/lib/pkgconfig/
-endef
 
 define Package/libyang/install
 	$(INSTALL_DIR) $(1)/usr/lib
 	$(CP) $(PKG_INSTALL_DIR)/usr/lib/libyang.so* $(1)/usr/lib/
 
-	$(INSTALL_DIR) $(1)/usr/lib/libyang
-	$(INSTALL_DIR) $(1)/usr/lib/libyang/extensions
-	$(INSTALL_DIR) $(1)/usr/lib/libyang/user_types
-	$(INSTALL_BIN) $(PKG_INSTALL_DIR)/usr/lib/libyang/extensions/* $(1)/usr/lib/libyang/extensions
-	$(INSTALL_BIN) $(PKG_INSTALL_DIR)/usr/lib/libyang/user_types/* $(1)/usr/lib/libyang/user_types
+	$(INSTALL_DIR) $(1)/usr/lib/libyang1
+	$(INSTALL_DIR) $(1)/usr/lib/libyang1/extensions
+	$(INSTALL_DIR) $(1)/usr/lib/libyang1/user_types
+	$(INSTALL_BIN) $(PKG_INSTALL_DIR)/usr/lib/libyang1/extensions/* $(1)/usr/lib/libyang1/extensions
+	$(INSTALL_BIN) $(PKG_INSTALL_DIR)/usr/lib/libyang1/user_types/* $(1)/usr/lib/libyang1/user_types
+endef
+
+define Package/libyang-cpp/install
+	$(INSTALL_DIR) $(1)/usr/lib
+	$(CP) $(PKG_INSTALL_DIR)/usr/lib/libyang-cpp.so* $(1)/usr/lib/
 endef
 
 define Package/yanglint/install
 	$(INSTALL_DIR) $(1)/usr/bin
-	$(INSTALL_BIN) $(PKG_INSTALL_DIR)/bin/yanglint $(1)/usr/bin/
+	$(INSTALL_BIN) $(PKG_INSTALL_DIR)/usr/bin/yanglint $(1)/usr/bin/
 endef
 
 $(eval $(call BuildPackage,libyang))
+$(eval $(call BuildPackage,libyang-cpp))
 $(eval $(call BuildPackage,yanglint))
